Fixed spacing issue on form

--- a/style.scss
+++ b/style.scss
@@ -102,6 +102,7 @@ iframe {
     font-family: $font;
     background: white;
     border: 0;
+    margin-top: 1em;
   }
   input[type=email] {
     margin-bottom: 1em;
